# codal-itsybitsy-m4

./: CMakeLists.txt  README.md  target-locked.json  target.json
inc/: localconf.h
ld/: samd51g18a_flash.ld  samd51g19a_flash.ld  samd51x18-bootloader.ld  samd51x19-bootloader.ld  stm32f4.ld
model/: BrainPad.cpp  BrainPad.h  BrainPadIO.cpp  BrainPadIO.h  Itsy.cpp  Itsy.h  ItsyIO.cpp  ItsyIO.h
samples/: main.cpp
scripts/: flash.sh  gdb.sh
src/: PeripheralPins.c  codal_target_hal.cpp  init.cpp  startup_samd51.c
tests/: blinky.cpp
